# bonif-station-meteo-template

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: classroom.yml  python-lint.yml
ressources/snippets/: apds9960_proximity_color.py  as7341_weather_analysis.py  csv_logging.py  error_handling.py  hts221_cross_validation.py  mqtt_example.py  neoslider_display.py
sensors/: __init__.py  aht20_sensor.py
tests/: test_instructor.py
